--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
     <p id="errorMessage" style="display: none;"></p>
 </div>
 
+    <div class="video-container">
+    <video controls>
+        <source src="path/to/your/birthday_video.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</div>
+
+
 <div id="birthdayMessage" class="message-box">
     <div class="message-container">
         <h1 class="sparkle">Happy Birthday, Iman Kashif!</h1>
