--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="video-container">
     <video controls>
-        <source src="path/to/your/birthday_video.mp4" type="video/mp4">
+        <source src="Black and Gold Animated 2024 Happy New Year Instagram Post" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 </div>
