--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
     </div>
 </div>
 
+    <video width="640" height="480" controls autoplay muted>
+    <source src="Black and Gold Animated 2024 Happy New Year Instagram Post" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
+
+
 <!-- Container for stars, hearts, and moon -->
 <div class="balloons-container"></div>
 
