--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div id="birthdayMessage" class="message-box">
     <div class="message-container">
-        <h1 class="sparkle">Happy Birthday, Iman Kashif!</h1>
+        <h1 class="sparkle">Happy Birthday, </h1>
         <p class="sparkle">Hope your day is as bright as your eyes.</p>
         <button onclick="revealMessage()">Click for a surprise</button>
         <p id="hiddenMessage" style="display: none;">
@@ -32,10 +32,12 @@
     </div>
 </div>
 
-    <video width="640" height="480" controls autoplay muted>
-    <source src="Black and Gold Animated 2024 Happy New Year Instagram Post" type="video/mp4">
-    Your browser does not support the video tag.
-</video>
+    <div class="video-container">
+    <video controls>
+        <source src="Black and Gold Animated 2024 Happy New Year Instagram Post.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</div>
 
 
 <!-- Container for stars, hearts, and moon -->
