--- a/pass.html
+++ b/pass.html
@@ -31,7 +31,7 @@
 
     <div id="birthdayMessage" class="message-box" style="display:none;">
         <div class="message-container">
-            <h1 class="sparkle">Happy Birthday, Iman Kashif!</h1>
+            <h1 class="sparkle">Happy Birthday, Scribbler!</h1>
             <p class="sparkle">Hope your day is as bright as your eyes.</p>
             <button onclick="revealMessage()">Click for a surprise</button>
             <p id="hiddenMessage" style="display: none;">
