--- a/video.html
+++ b/video.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Birthday Project</title>
     <link rel="stylesheet" href="video.css">
-    <audio id="MM" src="Yiruma, (이루마) - River Flows in You.mp3" preload="auto" loop></audio>
-
+  <audio id="Make" src="Rename.mp3" preload="auto" autoplay loop muted></audio>
 </head>
 <body>
     <div class="date-container">Nov 2, 2022</div>
